--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6875,3 +6875,25 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+/* Featurettes---------------------------------------------------- */
+    .featurette-divider {
+        margin: 30px 0; /* Space out the Bootstrap <hr> more */
+    }
+    .featurette {
+        padding-top: 20px; /* Vertically center images part 1: add padding above and below text. */
+        overflow: hidden; /* Vertically center images part 2: clear their floats. */
+    }
+/* Give some space on the sides of the floated elements so text doesn't run right into it. */
+    .featurette-image.pull-left {
+        margin-right: 40px;
+    }
+    .featurette-image.pull-right {
+        margin-left: 40px;
+    }
+/* Thin out the marketing headings */
+    .featurette-heading {
+        font-size: 50px;
+        font-weight: 300;
+        line-height: 1;
+        letter-spacing: -1px;
+    }
