--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6883,6 +6883,7 @@ button.close {
         padding-top: 20px; /* Vertically center images part 1: add padding above and below text. */
         overflow: hidden; /* Vertically center images part 2: clear their floats. */
         margin: 5%;
+        padding-bottom: 20px;
     }
 /* Give some space on the sides of the floated elements so text doesn't run right into it. */
     .featurette-image.pull-left {
